App is ready for testing: fixed typos, db table config, parsing bugs, changed DELETE func to get id from path
