# app/models/ratings_model.go
@@ -6,12 +6,12 @@ import (
 	"github.com/google/uuid"
 )
 
-type Ratings struct {
-	ID            uuid.UUID `db:"id" json:"id" validate:"required,uuid"`
-	CreatedAt     time.Time `db:"created_at" json:"created_at"`
-	Company       string    `db:"company" json:"company" validate:"required,lte=255"`
-	Author        string    `db:"author" json:"author" validate:"required,lte=255"`
-	AuthorRole    string    `db:"author_role" json:"authorrole" validate:"required,lte=255"`
-	CompanyRating int       `db:"company_rating" json:"rating" validate:"required,min=1,max=5"`
-	Description   string    `db:"description" json:"description" validate:"required,lte=255"`
+type Rating struct {
+	ID            uuid.UUID `db:"ID" json:"id" validate:"required,uuid"`
+	CreatedAt     time.Time `db:"CREATED_AT" json:"createdat"`
+	Company       string    `db:"COMPANY" json:"company" validate:"required,lte=255"`
+	Author        string    `db:"AUTHOR" json:"author" validate:"required,lte=255"`
+	AuthorRole    string    `db:"AUTHOR_ROLE" json:"authorrole" validate:"required,lte=255"`
+	CompanyRating int       `db:"COMPANY_RATING" json:"rating" validate:"required,min=1,max=5"`
+	Description   string    `db:"DESCRIPTION" json:"description" validate:"required,lte=255"`
 }
