# docs/swagger.json
@@ -15,7 +15,7 @@
         "version": "1.0"
     },
     "paths": {
-        "/v1/rating": {
+        "/api/v1/rating": {
             "post": {
                 "security": [
                     {
@@ -84,52 +84,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Ratings"
+                            "$ref": "#/definitions/models.Rating"
                         }
                     }
                 }
             }
         },
-        "/v1/rating/": {
-            "delete": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "Delete rating by given ID.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Rating"
-                ],
-                "summary": "delete rating by given ID",
-                "parameters": [
-                    {
-                        "description": "Rating ID",
-                        "name": "id",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "204": {
-                        "description": "ok",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/v1/rating/{id}": {
+        "/api/v1/rating/{id}": {
             "get": {
                 "description": "Get rating by given ID.",
                 "consumes": [
@@ -155,13 +116,48 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Ratings"
+                            "$ref": "#/definitions/models.Rating"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Delete rating by given ID.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Rating"
+                ],
+                "summary": "delete rating by given ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Rating ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "ok",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
             }
         },
-        "/v1/ratings": {
+        "/api/v1/ratings": {
             "get": {
                 "description": "Get all existing ratings.",
                 "consumes": [
@@ -180,14 +176,14 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.Ratings"
+                                "$ref": "#/definitions/models.Rating"
                             }
                         }
                     }
                 }
             }
         },
-        "/v1/token/new": {
+        "/api/v1/token/new": {
             "get": {
                 "description": "Create a new access token.",
                 "consumes": [
@@ -212,7 +208,7 @@
         }
     },
     "definitions": {
-        "models.Ratings": {
+        "models.Rating": {
             "type": "object",
             "required": [
                 "author",
@@ -235,7 +231,7 @@
                     "type": "string",
                     "maxLength": 255
                 },
-                "created_at": {
+                "createdat": {
                     "type": "string"
                 },
                 "description": {
